Updates to new layout

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,14 @@
 
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:400,700');
 
+html {
+	box-sizing: border-box;
+}
+
+*, *:before, *:after {
+	box-sizing: inherit;
+}
+
 body {
   background: #394053;
 }
@@ -11,7 +19,11 @@ a:link {color: #008AFF;}
 a:visited {color: #490A3D;}
 a:hover {color: #394053;}
 a:active {color: #BD1550;}
-
+.easing-transition, a {
+	-moz-transition: 0.2s all linear;
+	-o-transition: 0.2s all linear;
+	transition: 0.2s all linear;
+}
 /* -- colors 
 http://www.colourlovers.com/palette/848743/(_”_)
 #490A3D // purple
@@ -21,9 +33,6 @@ http://www.colourlovers.com/palette/848743/(_”_)
 #8A9B0F // green
 */
 
-header {
-
-}
 /*header [class^="col"] {
   padding-top: 2em; 
 }*/
@@ -31,6 +40,9 @@ header {
   width: 100%;
   height: auto;
 }*/
+header {
+  margin-top: 60px;
+}
 header [class^="col"] .title {
   margin-top: 0;
 }
@@ -38,26 +50,28 @@ header .row [class^="col"]:first-child {
   text-align: center;
 }
 header .container {
-  margin: 0;
+  margin: 0 auto;
   width: 100%;
 }
 header .logo {
   max-width: 7em;
+  margin-top: 1em;
 }
 header .nav {
   text-align: center;
+  margin: 2em 0;
 }
-header .nav .social a {
+header .nav .social a img {
   width: 2em;
   height: 2em;
 }
 header .blurb a {
   display: inline-block;
-  padding: 0.25em;
+  padding: 0.125em 0.5em;
   border-radius: 0.25em;
-  font-weight: bold;
   text-decoration: none;
-  margin: 0.125em;
+  margin: 0.125em 0.25em;
+  color: #fff;
 }
 section {
   padding: 6em 2em;
@@ -65,29 +79,33 @@ section {
   margin: 0 auto;
 }
 section .box {
-  background: #fff;
   padding: 2em 0 4em 0;
-  box-shadow: 0px 4px 4px #333;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-right-width: 0;
+  border-left-width: 0;
+  border-style: solid;
+  background: #fff;
+  /*box-shadow: 0px 4px 4px #333;*/
 }
 .box .sample {
   box-shadow: 0 0 6px #666;
   min-height: 200px;
 }
 #about .box {
-  border-bottom: solid 1em #BD1550;
-  border-top: solid 1em #BD1550;
+  border-color:#BD1550;
 }
 #about h2 {
   color: #BD1550;
 }
 #work .box {
-  border-bottom: solid 1em #8A9B0F;
+  border-color:#8A9B0F;
 }
 #work h2 {
   color: #8A9B0F;
 }
 #contact .box {
-  border-bottom: solid 1em #E97F02;
+  border-color: #E97F02;
 }
 #contact h2 {
   color: #E97F02;
@@ -125,6 +143,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: .5em 1em;
   text-decoration: none;
   font-size: 1.25em;
+  float: left;
 }
 .nav .social a {
   width: 1.25em;
@@ -133,11 +152,13 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   background-size: contain;
 }
-/*nav {
-  position: absolute;
+nav {
+  position: fixed;
   top: 60px;
-  width: 100%;
-}*/
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
 nav .nav {
   
 }
@@ -186,6 +207,14 @@ nav .nav li a {
   width: 100%;
   z-index: 100;
 }
+.toggle-menu {
+  padding: 0.5em 1em 0em;
+  background: #394053;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+}
 
 @media only screen and (min-width: 45em) {  /* 720px */
   /*nav {
@@ -193,10 +222,13 @@ nav .nav li a {
     margin-bottom: 3em;
   }*/
   header {
-    padding: 10em 1em;
-    max-width: 860px;
+    padding: 30vh 1em 1em;
     margin: 0 auto;
-    height: 20em;
+    width: 100vw;
+    height: 100vh;
+  }
+  nav {
+    margin-top: 0;
   }
   nav .nav {
     width: 100%;
