--- a/css/main.css
+++ b/css/main.css
@@ -49,10 +49,10 @@ header [class^="col"] .title {
 header .row [class^="col"]:first-child {
   text-align: center;
 }
-header .container {
+/*header .container {
   margin: 0 auto;
   width: 100%;
-}
+}*/
 header .logo {
   max-width: 7em;
   margin-top: 1em;
@@ -61,7 +61,7 @@ header .nav {
   text-align: center;
   margin: 2em 0;
 }
-header .nav .social a img {
+header .nav.social a img {
   width: 2em;
   height: 2em;
 }
@@ -70,18 +70,18 @@ header .blurb a {
   padding: 0.125em 0.5em;
   border-radius: 0.25em;
   text-decoration: none;
-  margin: 0.125em 0.25em;
+  margin: 0.25em;
   color: #fff;
 }
 section {
-  padding: 6em 2em;
+  padding: 5em 2em;
   max-width: 860px;
   margin: 0 auto;
 }
 section .box {
   padding: 2em 0 4em 0;
-  border-top-width: 1px;
-  border-bottom-width: 1px;
+  border-top-width: 0.5em;
+  border-bottom-width: 1em;
   border-right-width: 0;
   border-left-width: 0;
   border-style: solid;
@@ -145,22 +145,15 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.25em;
   float: left;
 }
-.nav .social a {
-  width: 1.25em;
-  height: 1.25em;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
 nav {
   position: fixed;
   top: 60px;
   left: 0;
   right: 0;
   z-index: 100;
-}
-nav .nav {
-  
+  width: 80%;
+  margin: 0 auto;
+  display: none;
 }
 nav .nav li {
   width: 100%;
@@ -208,12 +201,32 @@ nav .nav li a {
   z-index: 100;
 }
 .toggle-menu {
+  text-align: right;
   padding: 0.5em 1em 0em;
-  background: #394053;
+  background-color: #394053;
+  background-color: rgba(0, 0, 0, 0.25);
   position: fixed;
   top: 0;
   z-index: 100;
   width: 100%;
+}
+.toggle-menu .container {
+  max-width: unset;
+}
+.nav.social li {
+  display: inline-block;
+}
+.nav.social li a {
+  display: inline-block;
+}
+.down-arrow {
+  width: 100px;
+  margin: 2em auto;
+}
+@media only screen and (min-width: 33.75em) {
+  nav {
+    width: 75%;
+  }
 }
 
 @media only screen and (min-width: 45em) {  /* 720px */
@@ -228,8 +241,11 @@ nav .nav li a {
     height: 100vh;
   }
   nav {
-    margin-top: 0;
+    width: 20em;
+    left: auto;
+    right: 13%;
   }
+  /*
   nav .nav {
     width: 100%;
     position: fixed;
@@ -245,5 +261,11 @@ nav .nav li a {
   }
   nav .nav li {
     width: 25%;
+  }*/
+}
+
+@media only screen and (min-width: 60em) {
+  nav {
+    right: 7%;
   }
 }
