--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ http://www.colourlovers.com/palette/848743/(_”_)
   height: auto;
 }*/
 header {
-  margin-top: 60px;
+  padding-top: 60px;
 }
 header [class^="col"] .title {
   margin-top: 0;
@@ -65,6 +65,10 @@ header .nav.social a img {
   width: 2em;
   height: 2em;
 }
+header .blurb p {
+  line-height: 2em;
+  font-size: 1.25em;
+}
 header .blurb a {
   display: inline-block;
   padding: 0.125em 0.5em;
@@ -86,7 +90,18 @@ section .box {
   border-left-width: 0;
   border-style: solid;
   background: #fff;
-  /*box-shadow: 0px 4px 4px #333;*/
+  box-shadow: 0px 4px 4px #333;
+  position: relative;
+}
+section .box .title {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  font-size: 2.75em;
+  line-height: 0.7em;
 }
 .box .sample {
   box-shadow: 0 0 6px #666;
@@ -100,6 +115,7 @@ section .box {
 }
 #work .box {
   border-color:#8A9B0F;
+  padding-top: 4em;
 }
 #work h2 {
   color: #8A9B0F;
@@ -221,7 +237,7 @@ nav .nav li a {
 }
 .down-arrow {
   width: 100px;
-  margin: 2em auto;
+  margin: 0em auto;
 }
 @media only screen and (min-width: 33.75em) {
   nav {
@@ -235,33 +251,25 @@ nav .nav li a {
     margin-bottom: 3em;
   }*/
   header {
-    padding: 30vh 1em 1em;
+    padding: 25vh 1em 1em;
     margin: 0 auto;
     width: 100vw;
     height: 100vh;
+  }
+  header .logo {
+    max-width: 15em;
+  }
+  header .blurb p {
+    line-height: 2.5em;
   }
   nav {
     width: 20em;
     left: auto;
     right: 13%;
   }
-  /*
-  nav .nav {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 10;
-    margin: 0 auto;
+  section .box .title {
+    font-size: 3em;
   }
-  .nav li {
-    display: inline-block;
-  }
-  .nav li a {
-    display: inline-block;
-  }
-  nav .nav li {
-    width: 25%;
-  }*/
 }
 
 @media only screen and (min-width: 60em) {
