Adjusts widths/heights

--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,8 @@ header .blurb a {
   color: #fff;
 }
 section {
-  padding: 5em 2em;
-  max-width: 860px;
+  padding: 5em 2em 0;
+  /*max-width: 860px;*/
   margin: 0 auto;
 }
 section .box {
@@ -84,7 +84,7 @@ section .box {
 }
 section .box .title {
   position: absolute;
-  top: 0px;
+  top: -1px;
   left: 0px;
   margin: 0;
   padding: 0;
@@ -226,7 +226,7 @@ nav .nav li a {
 }
 .down-arrow {
   width: 100px;
-  margin: 0em auto;
+  margin: 2em auto 0em;
 }
 @media only screen and (min-width: 33.75em) {
   nav {
@@ -238,8 +238,6 @@ nav .nav li a {
   header {
     padding: 25vh 1em 1em;
     margin: 0 auto;
-    width: 100vw;
-    height: 100vh;
   }
   header .logo {
     max-width: 15em;
@@ -252,12 +250,28 @@ nav .nav li a {
     left: auto;
     right: 13%;
   }
+  header,
+  section {
+    width: 100vw;
+    height: auto;
+  }
   section .box .title {
     font-size: 3em;
   }
 }
-
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 45em) and (orientation: portrait) {
+  header,
+  section {
+    width: 100vw;
+    height: 100vh;
+  }
+}
+@media only screen and (min-width: 60em) { /* 960px */
+  header,
+  section {
+    width: 80vw;
+    height: 100vh;
+  }
   nav {
     right: 7%;
   }
