--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ header {
   padding-top: 60px;
 }
 header [class^="col"] .title {
-  margin-top: 0;
+  margin: 0;
 }
 header .row [class^="col"]:first-child {
   text-align: center;
@@ -57,6 +57,7 @@ header .nav.social a img {
 header .blurb p {
   line-height: 2em;
   font-size: 1.25em;
+  margin-top: 0;
 }
 header .blurb a {
   display: inline-block;
@@ -67,7 +68,7 @@ header .blurb a {
   color: #fff;
 }
 section {
-  padding: 5em 2em 0;
+  padding: 5em 1em 0;
   /*max-width: 860px;*/
   margin: 0 auto;
 }
@@ -84,13 +85,14 @@ section .box {
 }
 section .box .title {
   position: absolute;
-  top: -1px;
+  top: -2px;
   left: 0px;
   margin: 0;
   padding: 0;
   text-transform: uppercase;
-  font-size: 2.75em;
+  font-size: 2.25em;
   line-height: 0.7em;
+  letter-spacing: -2px;
 }
 .box .sample {
   box-shadow: 0 0 6px #666;
@@ -240,7 +242,7 @@ nav .nav li a {
     margin: 0 auto;
   }
   header .logo {
-    max-width: 15em;
+    max-width: 10em;
   }
   header .blurb p {
     line-height: 2.5em;
