--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
-@import url("../css/normalize.css");
-@import url("../css/simple-grid.css");
+@import url("css/normalize.css");
+@import url("css/simple-grid.css");
 
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:400,700');
 
