--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,5 @@
 @import url("css/normalize.css");
 @import url("css/simple-grid.css");
-
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:400,700');
 
 $color__link:#008AFF;
@@ -135,21 +134,17 @@ section {
         background: #fff;
         box-shadow: 0px 4px 4px #333;
         position: relative;
-    }
-    .box .title {
-        position: absolute;
-        top: -2px;
-        left: 0px;
-        margin: 0;
-        padding: 0;
-        text-transform: uppercase;
-        font-size: 2.25em;
-        line-height: 0.7em;
-        letter-spacing: -2px;
-    }
-    .box .sample {
-        box-shadow: 0 0 6px #666;
-        min-height: 200px;
+        .title {
+            position: absolute;
+            top: -2px;
+            left: 0px;
+            margin: 0;
+            padding: 0;
+            text-transform: uppercase;
+            font-size: 2.25em;
+            line-height: 0.7em;
+            letter-spacing: -2px;
+        }
     }
 }
 
@@ -169,6 +164,13 @@ section {
     }
     h2 {
         color: $color__green;
+    }
+    .sample {
+            img {
+                box-shadow: 0 0 6px #666;
+                width: 100%;
+                height: auto;
+            }
     }
 }
 #blog {
