Adds section img classes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -145,6 +145,15 @@ section {
             line-height: 0.7em;
             letter-spacing: -2px;
         }
+        img {
+            margin: 1em;
+        }
+        .right {
+            float: right;
+        }
+        .left {
+            float: left;
+        }
     }
 }
 
